Fix crash in optmization guide if no hints configured

Bug: 788900
Change-Id: Ia15c1712bc894b2c69920d37192c75b47dc67fbe
Reviewed-on: https://chromium-review.googlesource.com/794170
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Commit-Queue: Doug Arnett <dougarnett@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519749}
Former-commit-id: b9a4dca651496927ad2c1575f49648aa0259efdf